--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "chad-buffer",
+    "name": "chadbuffer",
     "version": "1.0.0",
     "main": "index.js",
     "author": "Dean 利迪恩 <@deanmlittle>",
